WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230531
[WinCairo] jquery/offset.html is randomly failing an assertion in DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers
https://bugs.webkit.org/show_bug.cgi?id=230531
Summary
[WinCairo] jquery/offset.html is randomly failing an assertion in DrawingArea...
Fujii Hironori
Reported
2021-09-21 00:17:46 PDT
[WinCairo] jquery/offset.html is randomly failing an assertion in DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers WinCairo WebKit2 Debug build. Regressions: Unexpected crashes (1) jquery/offset.html [ Crash ] ASSERTION FAILED: m_layerTreeHost C:\home\webkit\gb\Source\WebKit\WebProcess\WebPage\CoordinatedGraphics\DrawingAreaCoordinatedGraphics.cpp(369) : WebKit::DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers 1 00007FF9610A1DEB WTFCrash 2 00007FF913CB967E WTFCrashWithInfo 3 00007FF913D7945C WebKit::DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers 4 00007FF913D80850 WebKit::LayerTreeHost::layerFlushTimerFired 5 00007FF913D8179E std::invoke<void (__cdecl WebKit::LayerTreeHost::*&)(void),WebKit::LayerTreeHost * &> 6 00007FF913D8126E std::_Invoker_ret<std::_Unforced,0>::_Call<void (__cdecl WebKit::LayerTreeHost::*&)(void),WebKit::LayerTreeHost * &> 7 00007FF913D812D1 std::_Call_binder<std::_Unforced,0,void (__cdecl WebKit::LayerTreeHost::*)(void),std::tuple<WebKit::LayerTreeHost *>,std::tuple<> > 8 00007FF913D8123B std::_Binder<std::_Unforced,void (__cdecl WebKit::LayerTreeHost::*&)(void),WebKit::LayerTreeHost *>::operator()<> 9 00007FF913D829AB WTF::Detail::CallableWrapper<std::_Binder<std::_Unforced,void (__cdecl WebKit::LayerTreeHost::*&)(void),WebKit::LayerTreeHost *>,void>::call 10 00007FF913CB82A4 WTF::Function<void __cdecl(void)>::operator() 11 00007FF913D82BCB WebCore::Timer::fired 12 00007FF918793B00 WebCore::ThreadTimers::sharedTimerFiredInternal 13 00007FF91879808F <lambda_262b710db5e1fd9cbe42ca9bc65314e1>::operator() 14 00007FF91879820B WTF::Detail::CallableWrapper<<lambda_262b710db5e1fd9cbe42ca9bc65314e1>,void>::call 15 00007FF913CB82A4 WTF::Function<void __cdecl(void)>::operator() 16 00007FF9187507E7 WebCore::MainThreadSharedTimer::fired 17 00007FF91570D42A WebCore::TimerWindowWndProc 18 00007FF98E64E7E8 CallWindowProcW 19 00007FF98E64E229 DispatchMessageW 20 00007FF961214B86 WTF::RunLoop::run 21 00007FF913D8930B WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess,1>::run 22 00007FF913D890D3 WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWin> 23 00007FF913D88F15 WebKit::WebProcessMain 24 00007FF6209E101D main 25 00007FF6209E125C __scrt_common_main_seh 26 00007FF98FA17034 BaseThreadInitThunk 27 00007FF98FD22651 RtlUserThreadStart
Attachments
Patch
(2.85 KB, patch)
2021-09-21 00:22 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-09-21 00:22:10 PDT
Created
attachment 438788
[details]
Patch
Fujii Hironori
Comment 2
2021-09-21 13:06:49 PDT
Comment on
attachment 438788
[details]
Patch Clearing flags on attachment: 438788 Committed
r282836
(
241967@main
): <
https://commits.webkit.org/241967@main
>
Fujii Hironori
Comment 3
2021-09-21 13:06:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2021-09-21 13:07:21 PDT
<
rdar://problem/83365558
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug