[WinCairo] jquery/offset.html is randomly failing an assertion in DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers https://bugs.webkit.org/show_bug.cgi?id=230531

Reviewed by Don Olmstead.

DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers shouldn't
be called while LayerTreeHost is paused by pauseRendering().

* WebProcess/WebPage/CoordinatedGraphics/LayerTreeHostTextureMapper.cpp:
(WebKit::LayerTreeHost::layerFlushTimerFired):
(WebKit::LayerTreeHost::pauseRendering):
(WebKit::LayerTreeHost::resumeRendering):
* WebProcess/WebPage/CoordinatedGraphics/LayerTreeHostTextureMapper.h: Added m_isSuspended.

Canonical link: https://commits.webkit.org/241967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282836 268f45cc-cd09-0410-ab3c-d52691b4dbfc